# arpa

./: .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  corrected_dependent_ttest.py  docker-compose.yml  mkdocs.yml  paper_experiment.py  pyproject.toml  requirements-experiment.txt  requirements.txt  toy_data_set.py
arpa/: __main__.py  base.py  cli.py
arpa/matching/: maximum_weighted_matching.py
arpa/plot/: graph.py
arpa/shannon_information/: mutual_info.py  shannon.py
arpa/transformer/: FeatureSelectionTransformer.py
arpa/utils/: symmetric_operators.py
csv/: colon.csv  connectionist-bench-sonar.csv  data_description.csv  hill-valley-noise.csv  hill-valley.csv  horse-colic.csv  ivs_data_description.csv  lung-cancer.csv  lung-discrete.csv  mushroom.csv  optical-recognition-handwritten-digits.csv  ozone-level-detection-eight.csv  ozone-level-detection-one.csv
docs/api/: feature_selection_transformer.md
tests/: test_base.py
